--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3.8'
 
 services:
 
@@ -25,4 +25,9 @@ services:
       - 8000:8000
     links:
       - dbminiblog
-    command: uvicorn "app.main:app" --reload
+    command: uvicorn "app.main:app" --host 0.0.0.0 --reload
+    env_file:
+      - .env
+
+volumes:
+    dbdata:
