--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,26 @@
+
+
+# Byte-compiled / optimized / DLL files
+*.pyc
+*~
+__pycache__
+app/__pycache__/*
+*app/__pycache__/*
+__pycache__/
+
+# Environments
 .env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+projetinho-flask
+
+migrations
+storage.db
 
 .vscode/
 
-__pycache__/
+
